# basic-chess

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  chess.lua  cmake_install.cmake  default.frag  default.vert  draw.lua  examiners.lua  glad.c  imgui.ini  main.cpp  main.cpp~
chess/: board.lua  chess.lua  draw.lua  main.lua
include/glad/: glad.h
